--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.5",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
