--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "aos": "^2.3.4",
     "daisyui": "^2.51.6",
     "dotenv": "^16.0.3",
     "firebase": "^9.22.0",
